[package]
name = "image_sieve"
version = "0.5.13"
authors = ["Florian Fetz <florian.fetz@googlemail.com>"]
description = "GUI based tool to sort out and categorize images, raw images and videos"
repository = "https://github.com/Futsch1/image-sieve"
license = "GPL-3.0+"
categories = ["multimedia::images"]
build = "build.rs"
edition = "2021"
readme = "README.md"

[dependencies]
slint = {version = "=1.2.0", features = ["backend-winit-x11", "renderer-winit-femtovg", "compat-1-0"], default_features = false}
nfd = "0.0.4"
image = "0.24"
kamadak-exif = "0.5"
chrono = "0.4"
num-traits = "0.2"
num-derive = "0.4"  
opener = "0.6"
img_hash = "3.2"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.0"
home = "0.5"
walkdir = "2"
ffmpeg-next = {version = "6.0", features = ["format", "codec", "software-scaling"], default_features = false}
fast_image_resize = "2.0"
rawloader = "0.37.0"
imagepipe = "0.5.0"
dark-light = "1.0"
strum = "0.25"
strum_macros = "0.25"
image-23 = { version = "=0.23", package="image" }
rusty-fork = "0.3.0"
backtrace = "0.3"

[dev-dependencies]
base64 = "0.21"

[build-dependencies]
slint-build = "=1.2.0"
winres = "0.1"

[profile.dev]
opt-level=1
