[package]
name = "item_sort_list"
version = "0.1.1"
authors = ["Florian Fetz <florian.fetz@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
kamadak-exif = "0.5.4"
chrono = "0.4"
num-traits = "0.2"
num-derive = "0.3"